# online_cinema_fastapi_project

./: .env.sample  .flake8  .gitignore  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: cd-pipeline.yml  main.yml
commands/: deploy.sh
docker/nginx/: Dockerfile
src/: celery_app.py  database.py  main.py  tasks.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  populate.py  session_postgresql.py  session_sqlite.py
src/database/migrations/: env.py
src/database/migrations/versions/: 991200450fd4_initial_migration.py
src/database/models/: __init__.py  accounts.py  cart.py  movies.py  notifications.py  orders.py  payments.py
src/exceptions/: __init__.py  email.py
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: order_confirmation.html
src/routes/: accounts.py  cart.py  movies.py  notifications.py  orders.py  payments.py  profiles.py
src/schemas/: __init__.py  accounts.py  cart.py  movies.py  notifications.py  orders.py  payments.py  profiles.py
src/storages/: interfaces.py  s3.py
src/tests/: conftest.py
src/tests/doubles/fakes/: storage.py
src/tests/doubles/stubs/: emails.py
src/tests/test_integration/: test_accounts.py  test_cart.py  test_movies.py  test_orders.py  test_payments.py  test_profiles.py
