[project]
name = "online-cinema-fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Liliya",email = "liliyakhu@ukr.net"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[all] (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (==4.0.1)",
    "aiosmtplib (>=5.1.1,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "stripe (>=15.2.1,<16.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "pillow (>=12.2.0,<13.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-env (>=1.6.0,<2.0.0)",
    "attrs (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]